<resources>
    <string name="app_name">seriesNat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="information">information</string>
    <string name="popular">popular</string>
    <string name="drama">drama</string>
    <string name="cartoons">cartoons</string>
    <string name="comedy">comedy</string>
    <string name="romantic">romantic</string>
    <string name="series">Series</string>
    <string name="information_about_the_variety_of_series">information about the variety of series</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">NEXT</string>
    <string name="todo">TODO</string>
    <string name="series_nat">Series Nat</string>
    <string name="welcome">Welcome to "Series Nat". The place where you can find information about all the TV series.</string>
    <string name="text2">2</string>
    <string name="hope_you_enjoy">Hope you enjoy</string>
    <string name="textview">TextView</string>
    <string name="todo1">TODO</string>
    <string name="lets_start">Lets start</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="long_in">Long in</string>
    <string name="lost_name">Lost name</string>
    <string name="first_name">First name</string>
    <string name="hello">Hello</string>
    <string name="please_select_a_category">Please select a category:</string>
    <string name="todo4">TODO</string>
    <string name="todo3">TODO</string>
</resources>